# ReBeL_LeducHoldem

./: CMakeLists.txt  readme.md
cfg/: test.txt
cpp/: cfr.h  command.h  data_loop.h  game.h  limit_solver.h  main.cpp  model_lock.h  net.h  net_interface.h  pybind.cpp  recursive_eval.cpp  recursive_solver.h  test.cpp  thread_loop.h  util.h
log/: train.txt
model/test/: epoch_69.ckpt  epoch_69.torchscript
python/: main.py  model.py  rela.cp37-win_amd64.pyd
